# c2000-inverter

include/: focpwmgeneration.h
libopeninv/src/: sine_core.cpp
platform/c2000/inverter/: inverter_main.cpp
platform/c2000/inverter_drivers/: CMakeLists.txt  adcdriver.cpp  breakswitchdriver.cpp  currentvoltagedriver.cpp  encoder.cpp  encoderdriver.cpp  gatedriver.cpp  gatedriver.h  pwmdriver.cpp
platform/c2000/inverter_drivers/c2000/: adcdriver.h  breakswitchdriver.h  currentvoltagedriver.h  encoder.h  encoderdriver.h  gatedriver.h  pwmdriver.h
platform/stm32f1/inverter/: inc_encoder.cpp
test/: testfocpwmgeneration.cpp
